@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.478 2007/02/14 12:22:36 steve Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.479 2007/02/14 14:59:01 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -100,6 +100,9 @@ PH/23 Applied sieve patches from the maintainer "tracking the latest notify
 PH/24 When the log selector "outgoing_port" was set, the port was shown as -1
       for deliveries of the second and subsequent messages over the same SMTP
       connection.
+
+PH/25 Applied Magnus Holmgren's patch for ${addresses, ${map, ${filter, and
+      ${reduce, with only minor "tidies".
 
 SC/02 Applied Daniel Tiefnig's patch to improve the '($parent) =' pattern match.
 
